--- a/client/src/components/panel.css
+++ b/client/src/components/panel.css
@@ -8,6 +8,9 @@
     text-align:center;
     font-family: Roboto;
     border-radius: 10px 10px 0px 0px;
+    margin-bottom: 0;
+    font-size:24px;
+
 }
 
 .waiting{
@@ -16,4 +19,47 @@
     top:100px;
     font-family: Roboto;
     font-size: 15px;
+}
+
+.data{
+    position: fixed;
+    right: 13px;
+    top: 83px;
+    background-color: rgb(201,240,239);
+    font-family: Roboto;
+    width: 150px;
+    padding: 13px;
+    margin-top: 0;
+}
+
+body{
+    background-color: rgb(238,242,243);
+}
+
+.titleHistory{
+    position:fixed;
+    left:13px;
+    font-family:Roboto;
+    background-color: rgb(175,228,227);
+    width: 250px;
+    font-size:24px;
+    text-align:center;
+    height:30px;
+    padding:13px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+ul{
+    font-family:Roboto;
+    position:fixed;
+    top:84px;
+    left:13px;
+    width:275px;
+    background-color: rgb(201,240,239);
+    text-align:center;
+    margin:0;
+    list-style-type: none;
+    padding:0.2px;
+    padding-bottom:7px;
+    padding-top:7px;
 }
