--- a/client/src/graph.css
+++ b/client/src/graph.css
@@ -1,7 +1,8 @@
 .dashboard{
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: auto;
+    grid-template-rows: 400px 400px;
     gap: 20px;
-    padding: 20px;
+    padding: 10px;
     justify-content: center;
 }
