--- a/client/src/components/diagrams.css
+++ b/client/src/components/diagrams.css
@@ -1,6 +1,7 @@
 .chart{
-    scale:1.3;
-    margin:50px;
+    scale:1.1;
+    margin: 50px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     padding: 10px;
+    justify-content: center;
 }
