--- a/client/src/graph.css
+++ b/client/src/graph.css
@@ -27,4 +27,9 @@ img{
     margin-left:5px;
     margin-top: 5px;
     box-shadow: 0 0 1px 1px rgba(0,0,0,0.1); 
+    transition: scale 0.3s;
+}
+
+img:hover{
+    scale:1.2;
 }
